@@ -34,6 +34,7 @@ CVS HEAD:
      * Elvish Outrider: increase melee to 8-4, increase ranged to 7-4
  * fixed some OoS errors when chatting while a fight is taking place
  * fixed the spurious "statistics verification failed" messages
+ * fixed bug #12611: modifying villages with [terrain] interacting badly with capturing them.
  
 Version 0.9.0:
  * user interface improvements:
